--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 title: My website
 subtitle: This is where I will tell my "friends" way too much about me
-cover-img:[/assets/img/home1.jpg]
+cover-img: "/assets/img/home1.jpg"
 ---
