--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 title: ⚠ Warning ⚠
 subtitle: This site contains the weird and wonderful
-cover-img: "/assets/img/home1.jpg"
+cover-img: [ "/assets/img/home1.jpg" : "Valentine NSW, Australia", "/assets/img/home2.jpg" : "Valentine NSW, Australia" ]
 ---
