Update Cover Art

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 layout: home
 title: ⚠ Warning ⚠
 subtitle: This site contains the weird and wonderful
-cover-img: [ "/assets/img/home1.jpg" : "Valentine NSW, Australia", "/assets/img/home2.jpg" : "Valentine NSW, Australia" ]
+cover-img: [ "/assets/img/home1.jpg" : "Valentine NSW, Australia", "/assets/img/home2.jpg" : "Valentine NSW, Australia", "/assets/img/home3/jpg" : "Wangi Wangi, NSW, Australia" ]
+share-title: The weird and wonderful
+share-description: Within you will find the ponderings and mind dumps of the mentally broken
 ---
