make heading smaller

--- a/4o4.html
+++ b/4o4.html
@@ -1,12 +1,10 @@
 ---
-layout: default
+layout: minimal
 title: How Embarrasing
 permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>You have been Rickkity Rick Wrecked</h1>
-  <br/>
-
-  <center><img src="{{ 'assets/img/404.jpg' | relative_url }}" alt="404 Not found" />
-</div></center>
+  <h3>You have been Rickkity Rick Wrecked</h3>
+  <center><img src="{{ 'assets/img/404.jpg' | relative_url }}" alt="404 Not found" /></center>
+</div>
