--- a/kb/index.html
+++ b/kb/index.html
@@ -5,9 +5,9 @@ title: Knowledge Base
 {% for page in site.pages %}
   {% if page.categories contains 'Knowledge-Base' %}
     <div class="item">
-      <h3><a href="{{ page.url }}">
-        {{ page.title }}
-      </a></h3>
+      <a href="{{ page.url }}">
+        {page.subtitle}: {{ page.title }}
+      </a>
 
       <p>{{page.description}}</p>
     </div>
