--- a/kb/index.html
+++ b/kb/index.html
@@ -6,7 +6,7 @@ title: Knowledge Base
   {% if page.categories contains 'Knowledge-Base' %}
     <div class="item">
       <a href="{{ page.url }}">
-        {page.subtitle}: {{ page.title }}
+        {{page.subtitle}}: {{ page.title }}
       </a>
 
       <p>{{page.description}}</p>
