--- a/kb/index.html
+++ b/kb/index.html
@@ -8,7 +8,7 @@ full-width: true
   {% if page.categories contains 'Knowledge-Base' %}
     <div class="item">
       <a href="{{ page.url }}">
-        {{page.subtitle}}: {{ page.title }}
+        {{page.title}}: {{ page.subtitle }}
       </a>
 
       <p>{{page.description}}</p>
