update to have html

--- a/kb/index.html
+++ b/kb/index.html
@@ -6,7 +6,7 @@ layout: page
 {% for page in site.pages %}
   {% if page.categories contains 'kb' %}
     <p class="item">
-      <a href="{{ page.url }}">
+      <a href="{{ page.url }}.html">
         {{page.title}}: {{ page.subtitle }}
       </a>
 
