--- a/kb/index.html
+++ b/kb/index.html
@@ -7,7 +7,7 @@ pagination:
 
 {{ content }}
 
-{% assign pages = paginator.pages | default: page.categories contains 'kb' %}
+{% assign pages = paginator.page.categories contains 'kb' %}
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
@@ -81,7 +81,7 @@ pagination:
         {{ page.excerpt | strip_html | truncatewords: excerpt_length }}
         {% assign excerpt_word_count = page.excerpt | number_of_words %}
         {% if page.content != page.excerpt or excerpt_word_count > excerpt_length %}
-          <a href="{{ page.url | absolute_url }}" class="page-read-more">[Read&nbsp;More]</a>
+          <a href="{{ page.url | absolute_url }}" class="post-read-more">[Read&nbsp;More]</a>
         {% endif %}
       </div>
       {% endunless %}
