--- a/kb/index.html
+++ b/kb/index.html
@@ -1,8 +1,9 @@
 ---
-layout: home
-title: Toyota
+layout: page
+title: Knowledge Base
 pagination: 
   enabled: true
   category: kb
-  collection: pages
+  collection: 
+    - pages
 ---
