--- a/kb/index.html
+++ b/kb/index.html
@@ -3,7 +3,19 @@ layout: page
 title: Knowledge Base
 pagination: 
   enabled: true
-  category: kb
-  collection: 
-    - pages
+list-category: kb
 ---
+
+layout: page
+---
+
+{% for page in site.pages %}
+  {% if page.categories contains page.list-category %}
+    <p class="item">
+      <a href="{{ page.url }}">
+        {{page.title}}: {{ page.subtitle }}
+      </a>
+     {% if page.share-description %}<br/>{{page.share-description}}{% endif %}
+    </p>
+    {% endif %}
+{% endfor %}
