--- a/kb/index.html
+++ b/kb/index.html
@@ -4,6 +4,7 @@ title: Knowledge Base
 pagination: 
   enabled: true
 list-category: kb
+cover-img: /assets/images/matrix.jpeg
 ---
 
 {% assign pages = site.posts | sort: 'title' %}
