--- a/kb/index.html
+++ b/kb/index.html
@@ -4,7 +4,7 @@ title: Knowledge Base
 pagination: 
   enabled: true
 list-category: kb
-cover-img: '/assets/img/matrix.jpg'
+cover-img: '/assets/img/matrix.jpeg'
 ---
 
 {% assign pages = site.posts | sort: 'title' %}
