--- a/kb/index.html
+++ b/kb/index.html
@@ -1,11 +1,15 @@
 ---
 layout: page
 title: Knowledge Base
+subtitle: Tips and tidbits that I have picked up along the way.
+
 pagination: 
   enabled: true
 list-category: kb
 cover-img: '/assets/img/matrix.jpeg'
 ---
+
+
 
 {% assign pages = site.posts | sort: 'title' %}
 
