--- a/kb/index.html
+++ b/kb/index.html
@@ -5,7 +5,7 @@ subtitle: Tips and tidbits that I have picked up along the way.
 
 pagination: 
   enabled: true
-	category: kb
+	category1: kb
 	sort_field: title
 cover-img: '/assets/img/matrix.jpeg'
 ---
