fix tabs to spaces

--- a/kb/index.html
+++ b/kb/index.html
@@ -5,8 +5,8 @@ subtitle: Tips and tidbits that I have picked up along the way.
 
 pagination: 
   enabled: true
-	category1: kb
-	sort_field: title
+  category: kb
+  sort_field: title
 cover-img: '/assets/img/matrix.jpeg'
 ---
 
