update paginator call

--- a/kb/index.html
+++ b/kb/index.html
@@ -14,7 +14,7 @@ cover-img: '/assets/img/matrix.jpeg'
 
 
 
-{% assign post = paginator.posts | site.posts | sort: 'title' %}
+{% assign posts = paginator.posts | default: site.posts | sort: 'title' %}
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
