--- a/kb/index.html
+++ b/kb/index.html
@@ -7,14 +7,13 @@ pagination:
   enabled: true
   category: kb
   sort_field: title
-  
+  category: kb
+
 sort-category: kb
 cover-img: '/assets/img/matrix.jpeg'
 ---
 
 
-
-{% assign posts = paginator.posts | default: site.posts | sort: 'title' %}
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
