set to page and not home

--- a/kb/index.html
+++ b/kb/index.html
@@ -15,6 +15,8 @@ cover-img: '/assets/img/matrix.jpeg'
 
 
 
+{% assign posts = paginator.posts }
+
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
 	
