--- a/kb/index.html
+++ b/kb/index.html
@@ -5,9 +5,10 @@ subtitle: Tips and tidbits that I have picked up along the way.
 
 pagination: 
   enabled: true
-  categor2y: kb
+  category: kb
   sort_field: title
   permalink: /kb/:num/
+  sort_reverse: true
 
 cover-img: '/assets/img/matrix.jpeg'
 ---
