--- a/kb/index.html
+++ b/kb/index.html
@@ -7,7 +7,7 @@ pagination:
   enabled: true
   category: kb
   sort_field: title
-  permalink: /kb/:num/
+  permalink: :num/
   sort_reverse: true
 
 cover-img: '/assets/img/matrix.jpeg'
