--- a/neurodiversity-in.au/faq.html
+++ b/neurodiversity-in.au/faq.html
@@ -34,7 +34,7 @@ tags:
 
 
 
-{% for faq in site.faq-neurodiversity-in.au %}
+{% for faq in site.neurodiversity.faq %}
   <div class="faq">
     <h2>{{ faq.question }}</h2>
     {{ faq.answer }}
